--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -159,135 +159,18 @@
 
       </div>
     </div>
-    <div class="blankHXS"></div>
   </div>
 
-  <div class="colorBgAPPOINTA">
-    <div class="blankHS"></div>
-    <!-- Arrow -->
-    <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="Grid">
-              <p class="tArrow"> Challenge and target audience</p>
-              <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Arrow -->
 
-    <div class="blankHXS"></div>
-
-    <!-- Opportunity and use cases -->
-    <div class="Grid Grid--full wrapper">
-      <div class="Grid-cell">
-        <div class="element">
-          <h4>My goal is design a <strong class="textUnderline APPOINTA">scheduling tool</strong>
-            for company recruiting interviews.
-            it helps recruiters and hiring managers <strong class="textUnderline APPOINTA">arrange
-              and schedule interviews</strong> with less time and effort. </h4>
-
-          <h4 class="leftVerLine APPOINTA">Recruiters and hiring managers usually allocate
-            colleagues interview appointment schedule. It takes time to <strong
-              class="textUnderline APPOINTA">find candidate and colleague's availability</strong> in
-            different calendar and app.</h4>
-
-          <h4 class="leftVerLine APPOINTA">
-            Matching colleagues' <strong class="textUnderline APPOINTA">interview skills</strong> to
-            candidate <strong class="textUnderline APPOINTA">interview type</strong> from different
-            team
-            sometimes is a challenge</h4>
-        </div>
-      </div>
-
-    </div>
-
-    <!-- Design process -->
-    <div class="blankHS"></div>
-
-    <!-- Arrow -->
-    <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="Grid">
-              <p class="tArrow"> Design thinking process </p>
-              <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Arrow -->
-    <div class="blankHXS"></div>
-
-    <div class="wrapper ">
-
-      <div class="Grid Grid--gutters Grid--cols-3">
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="elementInner cardAPPOINTA heightM">
-              <img class="iconM" src="IconFolder.svg" alt="icon">
-              <div class="blankHXS"></div>
-              <h5> <strong> Research &amp; define </strong> </h5>
-              <ul>
-                <li> Use cases</li>
-                <li> User journey </li>
-                <li> Personas </li>
-                <li> Insights </li>
-
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="elementInner cardAPPOINTA heightM">
-              <img class="iconM" src="IconDocument.svg" alt="icon">
-
-              <div class="blankHXS"></div>
-              <h5> <strong> Design, test, iterate </strong> </h5>
-              <ul>
-                <li> Wireframes</li>
-                <li> Mid-fi screen flow</li>
-                <li> Usability testing</li>
-
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="elementInner cardAPPOINTA heightM">
-              <img class="iconM" src="iconBrush.svg" alt="icon">
-
-              <div class="blankHXS"></div>
-              <h5> <strong> Final design </strong> </h5>
-              <ul>
-                <li> Hi-fi flow screens</li>
-                <li> Prototype</li>
-
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="blankHS"></div>
-    </div>
-    <div class="blankHS"></div>
-
-  </div>
-  <!-- Design process -->
 
   <main class="APPOINTA">
     <nav class="section-nav ">
       <ol>
         <li><a href="#research">Research &#38; define</a>
           <ul>
+            <li class=""><a href="#overview">Overview </a></li>
+
+
             <li class=""><a href="#useCases">Use cases </a></li>
             <li class=""><a href="#userJourney">User journey</a></li>
 
@@ -308,19 +191,144 @@
       </ol>
     </nav>
 
-    <div class="blankHM"></div>
 
     <section id="research">
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
           <h1 class="Grid Grid--center"> <span>Research</span><img class="moveUpDown widthLogo"
               src="../../icon/icon_research.svg" alt="Research">
-
-            <h4 class="element">Hiring managers and candidate</h4>
           </h1>
         </div>
       </div>
       <div class="blankHXS"></div>
+      <section id="overview">
+
+        <div class="colorBgAPPOINTA">
+          <div class="blankHS"></div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Challenge and target audience</p>
+                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+
+          <div class="blankHXS"></div>
+
+          <!-- Opportunity  -->
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h4>My goal is design a <strong class="textUnderline APPOINTA">scheduling
+                    tool</strong>
+                  for company recruiting interviews.
+                  it helps recruiters and hiring managers <strong
+                    class="textUnderline APPOINTA">arrange
+                    and schedule interviews</strong> with less time and effort. </h4>
+
+                <h4 class="leftVerLine APPOINTA">Recruiters and hiring managers usually allocate
+                  colleagues interview appointment schedule. It takes time to <strong
+                    class="textUnderline APPOINTA">find candidate and colleague's
+                    availability</strong> in
+                  different calendar and app.</h4>
+
+                <h4 class="leftVerLine APPOINTA">
+                  Matching colleagues' <strong class="textUnderline APPOINTA">interview
+                    skills</strong> to
+                  candidate <strong class="textUnderline APPOINTA">interview type</strong> from
+                  different
+                  team
+                  sometimes is a challenge</h4>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- Opportunity  -->
+          <div class="blankHS"></div>
+
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Design thinking process </p>
+                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+
+          <div class="wrapper ">
+
+            <div class="Grid Grid--gutters Grid--cols-3">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInner cardAPPOINTA heightM">
+                    <img class="iconM" src="IconFolder.svg" alt="icon">
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Research &amp; define </strong> </h5>
+                    <ul>
+                      <li> Use cases</li>
+                      <li> User journey </li>
+                      <li> Personas </li>
+                      <li> Insights </li>
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInner cardAPPOINTA heightM">
+                    <img class="iconM" src="IconDocument.svg" alt="icon">
+
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Design, test, iterate </strong> </h5>
+                    <ul>
+                      <li> Wireframes</li>
+                      <li> Mid-fi screen flow</li>
+                      <li> Usability testing</li>
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInner cardAPPOINTA heightM">
+                    <img class="iconM" src="iconBrush.svg" alt="icon">
+
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Final design </strong> </h5>
+                    <ul>
+                      <li> Hi-fi flow screens</li>
+                      <li> Prototype</li>
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blankHS"></div>
+          </div>
+          <div class="blankHS"></div>
+
+        </div>
+      </section>
+      <!-- Design process -->
       <section id="useCases">
         <!-- Arrow -->
         <div class="wrapper">
@@ -337,7 +345,7 @@
         </div>
         <!-- Arrow -->
         <div class="blankHXS"></div>
-        <!-- uses relationship -->
+        <!-- uses cases -->
         <div class="wrapper">
           <div class="Grid Grid--full ">
             <div class="element ">
@@ -391,19 +399,12 @@
                     </div>
                   </div>
                 </div>
-
-                <div class="blankHS"></div>
-
-                <img class="" src="usersRelationship.svg" alt="Pain points">
-                <div class="blankHXS"></div>
-                <h5> Relationship between different types of use cases with conmmon behavior</h5>
               </div>
             </div>
           </div>
         </div>
-        <!-- uses relationship -->
+        <!-- uses cases -->
       </section>
-      <div class="blankHS"></div>
 
       <section id="userJourney">
         <!-- Arrow -->
@@ -420,7 +421,7 @@
           </div>
         </div>
         <!-- Arrow -->
-        <div class="blankHS"></div>
+        <div class="blankHXS"></div>
         <!-- user Journey -->
         <div class="wrapper">
           <div class="Grid Grid--full u-textCenter">
@@ -428,61 +429,78 @@
               <div class="element">
 
                 <img class="" src="userJourney.svg" alt="Pain points">
-                <div class="blankHS"></div>
-
-                <h5> This journey provides a high-level narrative of the experience from the user’s
-                  perspective.</h5>
               </div>
             </div>
 
+          </div>
+        </div>
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <h4>Fundamentally, the solution is to find availability from <strong
+                class="textUnderline APPOINTA"> interviewers</strong> and <strong
+                class="textUnderline APPOINTA">candidates </strong></h4>
+
+              <h4>In order to have<strong
+                class="textUnderline APPOINTA"> available interviews</strong>. the Interview <strong
+                class="textUnderline APPOINTA">skill set</strong> needs match interview <strong
+                class="textUnderline APPOINTA">type</strong></h4>
+            </div>
           </div>
         </div>
         <!-- user Journey -->
       </section>
       <div class="colorBgAPPOINTA">
 
-      <section id="personas">
+        <section id="personas">
 
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid">
-                  <p class="tArrow"> Personas</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Personas</p>
+                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <!-- Arrow -->
-        <div class="blankHS"></div>
-        <!-- Personas -->
-        <div class="wrapper">
-          <div class="Grid Grid--full u-textCenter">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="ShadowBox" src="personas01.svg" alt="Pain points">
-                <div class="blankHS"></div>
+          <!-- Arrow -->
 
-                <h5> <strong>Insights:</strong> From the hiring manager interview, I realized the
-                  challenge of scheduling interviews not just to match the right date and time, but
-                  also need to find a way to sync team availability and interview skill set</h5>
-              </div>
-              <div class="blankHS"></div>
-
-              <div class="element">
-                <img class="ShadowBox" src="personas02.svg" alt="Pain points">
-                <div class="blankHS"></div>
-                <h5> <strong>Insights:</strong> From the recruiter interview, I learned the way to
-                  match between hiring managers and candidate availability is crucial</h5>
+          <div class="blankHS"></div> <!-- Personas -->
+          <div class="wrapper">
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element">
+                  <img class="" src="personas.svg" alt="Pain points">
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <!-- Personas -->
-      </section>
+          <!-- Personas -->
+          <!-- Personas  insight -->
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h4 class="leftVerLine APPOINTA">From the <strong
+                    class="textUnderline APPOINTA">hiring manager</strong> interview, I realized the
+                  challenge of scheduling interviews is team memebrs' <strong
+                    class="textUnderline APPOINTA">availability and skills</strong> </h4>
+                <h4 class="leftVerLine APPOINTA">From the <strong
+                    class="textUnderline APPOINTA">recruiter </strong> interview, I found team
+                  <strong class="textUnderline APPOINTA">availability</strong> and organizing
+                  <strong class="textUnderline APPOINTA">interview
+                    schedule</strong>, <strong class="textUnderline APPOINTA">notifying
+                    people</strong> are important steps to scheude an interview
+                </h4>
+              </div>
+            </div>
+          </div>
+          <!-- Personas insight  -->
+
+        </section>
 
         <section id="insights">
           <!-- Arrow -->
@@ -557,6 +575,8 @@
                   identify pain points with each scenario.</h5>
               </div>
             </div>
+            <img class="" src="usersRelationship.svg" alt="Pain points">
+            <div class="blankHXS"></div>
           </div>
         </section>
         <!-- insights -->
