--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -162,7 +162,47 @@
         </div>
       </div>
     </div>
+
+    <div class="blankHM"></div>
+  </div>
+  <!-- Working process -->
+
+  <main class="">
+    <nav class="section-nav SEER">
+      <ol>
+        <li><a href="#research">Research</a>
+          <ul>
+            <li class=""><a href="#overview">Overview </a></li>
+
+            <li class=""><a href="#interview">Interview &#38; Affinity Mapping </a></li>
+          </ul>
+        </li>
+        <li><a href="#findings">Research &#38; Findings</a>
+          <ul>
+            <li class=""><a href="#userJourney">User journey</a></li>
+            <li class=""><a href="#personas">Personas </a></li>
+          </ul>
+        </li>
+
+        <li class=""><a href="#ideation">Initial concepts </a></li>
+
+
+
+        <li><a href="#proposal">Design, test, iterate </a>
+          <ul>
+            <li class=""><a href="#wireframes">Wireframes</a></li>
+            <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow </a></li>
+            <li class=""><a href="#testing">Usability testing </a></li>
+          </ul>
+        </li>
+        <li><a href="#solution">Final solution </a></li>
+        <li><a href="#takeaways">Takeaways </a></li>
+      </ol>
+    </nav>
+
     <div class="blankHS"></div>
+    <section id="overview" class="">
+
     <!-- Arrow -->
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -212,42 +252,7 @@
       </div>
     </div>
     <!-- Opportunity and use cases -->
-    <div class="blankHS"></div>
-  </div>
-  <!-- Working process -->
-
-  <main class="">
-    <nav class="section-nav SEER">
-      <ol>
-        <li><a href="#research">Research</a>
-          <ul>
-            <li class=""><a href="#interview">Interview &#38; Affinity Mapping </a></li>
-          </ul>
-        </li>
-        <li><a href="#findings">Research &#38; Findings</a>
-          <ul>
-            <li class=""><a href="#userJourney">User journey</a></li>
-            <li class=""><a href="#personas">Personas </a></li>
-          </ul>
-        </li>
-
-        <li class=""><a href="#ideation">Initial concepts </a></li>
-
-
-
-        <li><a href="#proposal">Design, test, iterate </a>
-          <ul>
-            <li class=""><a href="#wireframes">Wireframes</a></li>
-            <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow </a></li>
-            <li class=""><a href="#testing">Usability testing </a></li>
-          </ul>
-        </li>
-        <li><a href="#solution">Final solution </a></li>
-        <li><a href="#takeaways">Takeaways </a></li>
-      </ol>
-    </nav>
-
-
+    </section>
     <section id="research" class="">
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
