--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </li>
           <li class="nav-item inactive"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item active"><a href="/" class="nav-link box">ABOUT</a></li>
+          <li class="nav-item active greenNav"><a href="/" class="nav-link box">ABOUT</a></li>
         </ul>
       </div>
       <div class="hamburger">
@@ -191,35 +191,24 @@
 
       </div>
     </div>
-
     <div class="t-intro zTop" data-aos="fade-up">
       <p>
         Passionate about translating complex business requirements into compelling user experiences
-        by
-        improving efficiency and productivity. I believe, the best design comes
+        by improving efficiency and productivity. I believe, the best design comes
         from the understanding of user needs and the business itself.
       </p>
-
-
-
-
       <p> I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS.
         Please
         visit my <a href="https://github.com/vicky-wyq" class="textIntro">GitHub</a> repository for
         more details.
-
       </p>
-
-
     </div>
 
   </div>
   <!--intro-->
-
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-
   <!-- Design Philosophy -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
