--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -130,7 +130,7 @@
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active "><a href="/project" class="nav-link box">PROJECT</a></li>
+          <li class="nav-item active APPOINTA"><a href="/project" class="nav-link box">PROJECT</a></li>
           <li class="nav-item inactive "><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
           </li>
@@ -163,8 +163,8 @@
 
 
 
-  <main class="APPOINTA">
-    <nav class="section-nav ">
+  <main class="">
+    <nav class="section-nav APPOINTA">
       <ol>
         <li><a href="#research">Research &#38; define</a>
           <ul>
