--- a/project/index.html
+++ b/project/index.html
@@ -122,7 +122,7 @@
       <a href="http://vickywang.me/" class="logo pointer">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active "><a href="/project" class="nav-link box">PROJECT</a></li>
+          <li class="nav-item active greenNav"><a href="/project" class="nav-link box">PROJECT</a></li>
           <li class="nav-item inactive "><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
           </li>
