--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -131,7 +131,7 @@
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active "><a href="/project" class="nav-link box">PROJECT</a></li>
+          <li class="nav-item active seer"><a href="/project" class="nav-link box">PROJECT</a></li>
           <li class="nav-item inactive "><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
           </li>
