--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -130,7 +130,8 @@
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active APPOINTA"><a href="/project" class="nav-link box">PROJECT</a></li>
+          <li class="nav-item active APPOINTA"><a href="/project" class="nav-link box">PROJECT</a>
+          </li>
           <li class="nav-item inactive "><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
           </li>
@@ -233,24 +234,20 @@
                     class="textUnderline APPOINTA">arrange
                     and schedule interviews</strong> with less time and effort. </h4>
 
-                <h4 class="leftVerLine APPOINTA">Recruiters and hiring managers usually allocate
-                  colleagues interview appointment schedule. It takes time to <strong
-                    class="textUnderline APPOINTA">find candidate and colleague's
-                    availability</strong> in
-                  different calendar and app.</h4>
+                <h4 class="leftVerLine APPOINTA">Recruiters and hiring managers usually invite
+                  colleagues to attend interviews. It takes time to <strong
+                    class="textUnderline APPOINTA">find</strong>
+                  candidate and colleague's <strong
+                    class="textUnderline APPOINTA">availability</strong>
+                  in different calendars and apps.</h4>
 
                 <h4 class="leftVerLine APPOINTA">
                   Matching colleagues' <strong class="textUnderline APPOINTA">interview
-                    skills</strong> to
-                  candidate <strong class="textUnderline APPOINTA">interview type</strong> from
-                  different
-                  team
-                  sometimes is a challenge</h4>
+                    skills</strong> to candidate <strong class="textUnderline APPOINTA">interview
+                    type</strong> from different team sometimes is a challenge as well.</h4>
               </div>
             </div>
-
           </div>
-
           <!-- Opportunity  -->
           <div class="blankHS"></div>
 
@@ -355,7 +352,8 @@
                   <div class="Grid-cell">
                     <div class="element">
                       <div class="elementInner cardAPPOINTA heightM">
-                        <img class="iconM" src="ppl_HR.svg" alt="Hiring managers, HR, Recruiters">
+                        <img class="iconM" src="ppl_recruiter.png"
+                          alt="Hiring managers, HR, Recruiters">
 
                         <div class="blankHXS"></div>
                         <h5> <strong> Hiring managers / Recruiters / HR </strong> </h5>
@@ -371,7 +369,7 @@
                   <div class="Grid-cell">
                     <div class="element">
                       <div class="elementInner cardAPPOINTA heightM">
-                        <img class="iconM" src="ppl_teammember.svg" alt="Team members">
+                        <img class="iconM" src="ppl_teammember.png" alt="Team members">
 
                         <div class="blankHXS"></div>
                         <h5> <strong> Team members</strong> </h5>
@@ -387,7 +385,7 @@
                   <div class="Grid-cell">
                     <div class="element">
                       <div class="elementInner cardAPPOINTA heightM">
-                        <img class="iconM" src="ppl_candidate.svg" alt="Team members">
+                        <img class="iconM" src="ppl_candidate.png" alt="Team members">
                         <div class="blankHXS"></div>
                         <h5> <strong> Candidates</strong> </h5>
                         <ul>
@@ -402,6 +400,8 @@
               </div>
             </div>
           </div>
+          <img class="" src="usersRelationship.svg" alt="Pain points">
+
         </div>
         <!-- uses cases -->
       </section>
@@ -437,18 +437,21 @@
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <h4>Fundamentally, the solution is to find availability from <strong
-                class="textUnderline APPOINTA"> interviewers</strong> and <strong
-                class="textUnderline APPOINTA">candidates </strong></h4>
+              <h4>I learned through my research that scheduling interviews fundamentally is to find
+                availability from <strong class="textUnderline APPOINTA"> interviewers</strong> and
+                <strong class="textUnderline APPOINTA">candidates </strong>
+              </h4>
 
-              <h4>In order to have<strong
-                class="textUnderline APPOINTA"> available interviews</strong>. the Interview <strong
-                class="textUnderline APPOINTA">skill set</strong> needs match interview <strong
-                class="textUnderline APPOINTA">type</strong></h4>
+              <h4>In order to have<strong class="textUnderline APPOINTA"> available
+                  interviews</strong>. the Interview <strong class="textUnderline APPOINTA">skill
+                  set</strong> needs match <strong class="textUnderline APPOINTA">interview
+                  type</strong></h4>
             </div>
           </div>
         </div>
         <!-- user Journey -->
+        <div class="blankHS"></div>
+
       </section>
       <div class="colorBgAPPOINTA">
 
@@ -565,17 +568,28 @@
                 </div>
               </div>
             </div>
-            <div class="Grid-cell">
-              <div class="element">
+            <!-- insights  -->
+            <div class="Grid Grid--full wrapper">
+              <div class="Grid-cell">
+                <div class="element">
 
-                <h5> <strong> Early concepts :</strong> I learned through my research that
-                  scheduling
-                  interviews fundamentally is finding a way to match interview type with team member
-                  skills. By setting team members in a single sheet with availability, I am able to
-                  identify pain points with each scenario.</h5>
+                  <h4>Checking colleagues' availability takes major time during scheduling an
+                    interview. team members are able to sync their<strong
+                      class="textUnderline APPOINTA">calendars</strong> , all the <strong
+                      class="textUnderline APPOINTA">availability</strong>
+                    will be in one place easy to find by candidates</h4>
+                  <h4>Hiring managers and recruiters define the <strong class="textUnderline APPOINTA">interview type</strong> in this app. the
+                    candidate will be able to select a date and time and put some notes from a link
+                    that belongs to a type of the interview
+                  </h4>
+                  <h4><strong class="textUnderline APPOINTA">Interview skills</strong> need to be trained and approved by the recruiter or hiring
+                    manager based on my interview. Interview skills will only add or modify in the
+                    admin account
+                  </h4>
+                </div>
               </div>
             </div>
-            <img class="" src="usersRelationship.svg" alt="Pain points">
+            <!-- insights  -->
             <div class="blankHXS"></div>
           </div>
         </section>
@@ -690,13 +704,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <h5> <strong>Minimal features for the first version:</strong> Adding team member
-                  availability and skills is the no.1 priority.
-                </h5>
-              </div>
-            </div>
+
             <div class="blankHS"></div>
 
           </div>
