--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -150,7 +150,7 @@
   <!-- Working process -->
   <div class="BGseer1">
 
-    <img class="" src="SeerFull.svg" alt="SEER">
+    <img src="SeerFull.svg" alt="SEER">
 
     <div class="wrapper zTop">
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
